--- a/loguin/areamember/index.html
+++ b/loguin/areamember/index.html
@@ -114,7 +114,9 @@
     <!-- Grid: 2 col en móvil -->
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 md:gap-6">
       <!-- 1. Libro -->
-      <button class="card aspect-[4/3] group" onclick="openModal('https://drive.google.com/file/d/1Em2Uz1mtyJHmlb2Pk06w1JchYiXT78wd/view?usp=drive_link','Libro: Código Completo de la Persuasión')">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20210903/pngtree-clouds-shuttle-night-gloomy-moon-material-image_798905.jpg')" 
+ onclick="openModal('https://7f5efc8c-3c47-4ebb-8955-b529f5255ded.usrfiles.com/ugd/7f5efc_1a306e5906a4456dbcf0355c9761b911.pdf','Libro: Código Completo de la Persuasión')">
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Libro</div>
           <h3 class="text-sm sm:text-base font-bold leading-snug">Código Completo de la Persuasión</h3>
@@ -122,7 +124,9 @@
       </button>
 
       <!-- 2. Audiobook -->
-      <button class="card aspect-[4/3] group" onclick="enterAudiobook()">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://cdn.pixabay.com/photo/2012/08/22/08/22/moon-54671_1280.jpg')" 
+ onclick="enterAudiobook()">
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Audiobook</div>
           <h3 class="text-sm sm:text-base font-bold leading-snug">Código de la Persuasión</h3>
@@ -130,7 +134,10 @@
       </button>
 
       <!-- 3. Psicolgía Oscura (video) -->
-      <button class="card aspect-[4/3] group" onclick="openModal('https://drive.google.com/file/d/18_tZlirSidwlG_ASeA7lom0ZB1T6tBmS/view','Código de la Persuasión Oscura')">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://static7.depositphotos.com/1275240/755/i/450/depositphotos_7554205-stock-photo-walking.jpg')" 
+ onclick="openModal('https://drive.google.com/file/d/18_tZlirSidwlG_ASeA7lom0ZB1T6tBmS/view','Código de la Persuasión Oscura')">
+ 
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Video</div>
           <h3 class="text-sm sm:text-base font-bold leading-snug">Código de la Persuasión Oscura</h3>
@@ -138,7 +145,10 @@
       </button>
 
       <!-- 4. Bonos (carpeta) -->
-      <button class="card aspect-[4/3] group" onclick="openModal('https://drive.google.com/drive/folders/1Ks0O2CJ4m06jzLg44y43Wu9l78Wdt6YJ','Bonos')">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://media.istockphoto.com/id/1482130036/pt/foto/person-in-dark-tunnel-going-towards-the-light.jpg?s=170667a&w=0&k=20&c=EjERNOx0twWLTUBeHlme7jb4xxsk944eisHwVoBq7_c=')" 
+ onclick="openModal('https://drive.google.com/drive/folders/1Ks0O2CJ4m06jzLg44y43Wu9l78Wdt6YJ','Bonos')">
+ 
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">BONOS</div>
           <h3 class="text-sm sm:text-base font-bold leading-snug">Accesos y materiales extra</h3>
@@ -146,7 +156,10 @@
       </button>
 
       <!-- 5. Libros Prohibidos (carpeta) -->
-      <button class="card aspect-[4/3] group" onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb','Libros Prohibidos')">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://us.123rf.com/450wm/ipheung/ipheung2110/ipheung211000107/176563730-conceito-de-seguran%C3%A7a-cibern%C3%A9tica-um-hacker-de-internet-an%C3%B4nimo-online-adulto.jpg?ver=6')" 
+ onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb','Libros Prohibidos')">
+ 
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Biblioteca</div>
           <h3 class="text-sm sm:text-base font-bold leading-snug">Libros Prohibidos</h3>
@@ -154,10 +167,13 @@
       </button>
 
       <!-- 6. Manuales de neurociencia - Artículos -->
-      <button class="card aspect-[4/3] group" onclick="openModal('https://drive.google.com/drive/folders/18T08y6aEltW3TM3eISL3nhklkkCewxQ8?usp=drive_link','Manuales de neurociencia — Artículos')">
+      <button class="card aspect-[4/3]" 
+ style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20210903/pngtree-clouds-shuttle-night-gloomy-moon-material-image_798905.jpg')" 
+ onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb','Manuales de neurociencia — Artículos')">
+
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Lecturas</div>
-          <h3 class="text-sm sm:text-base font-bold leading-snug">Manuales de neurociencia — Artículos</h3>
+          <h3 class="text-sm sm:text-base font-bold leading-snug">Manuales de neurociencia</h3>
         </div>
       </button>
     </div>
@@ -169,7 +185,7 @@
       <h2 class="text-lg font-bold">Audiobook — Código de la Persuasión</h2>
       <button onclick="backToHome()"
               class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07]">
-        ⟵ Volver al menú
+      ⭠
       </button>
     </div>
 
@@ -182,7 +198,7 @@
       <!-- 1 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Escasez — El Poder de lo que es Raro
+          <span class="badge">Sección</span>1. Escasez — El Poder de lo que es Raro
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -194,7 +210,7 @@
       <!-- 2 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Urgencia — La Fuerza del Tiempo en tu Contra
+          <span class="badge">Sección</span>2. Urgencia — La Fuerza del Tiempo en tu Contra
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -206,7 +222,7 @@
       <!-- 3 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Prueba Social — El Poder de lo que Hacen los Demás
+          <span class="badge">Sección</span>3. Prueba Social — El Poder de lo que Hacen los Demás
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -218,7 +234,7 @@
       <!-- 4 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Autoridad — El Peso de la Especialización
+          <span class="badge">Sección</span>4. Autoridad — El Peso de la Especialización
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -230,7 +246,7 @@
       <!-- 5 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Reciprocidad — El Poder de Dar Antes de Recibir
+          <span class="badge">Sección</span>5. Reciprocidad — El Poder de Dar Antes de Recibir
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -242,7 +258,7 @@
       <!-- 6 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Novedad — El Fascinio por lo que es Nuevo
+          <span class="badge">Sección</span>6. Novedad — El Fascinio por lo que es Nuevo
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -254,7 +270,7 @@
       <!-- 7 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Anticipación — El Placer de la Espera
+          <span class="badge">Sección</span>7. Anticipación — El Placer de la Espera
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -266,7 +282,7 @@
       <!-- 8 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Historias — El Encanto del Storytelling
+          <span class="badge">Sección</span>8. Historias — El Encanto del Storytelling
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -278,7 +294,7 @@
       <!-- 9 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Comunidad — El Poder del Pertenecer
+          <span class="badge">Sección</span>9. Comunidad — El Poder del Pertenecer
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -290,7 +306,7 @@
       <!-- 10 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Simplicidad — El Atajo que Todos Desean
+          <span class="badge">Sección</span>10. Simplicidad — El Atajo que Todos Desean
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -302,7 +318,7 @@
       <!-- 11 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Curiosidad — El Vacío que Debe Ser Llenado
+          <span class="badge">Sección</span>11. Curiosidad — El Vacío que Debe Ser Llenado
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -314,7 +330,7 @@
       <!-- 12 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Exclusividad — El Valor del Acceso Restringido
+          <span class="badge">Sección</span>12. Exclusividad — El Valor del Acceso Restringido
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -326,7 +342,7 @@
       <!-- 13 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Dolor y Placer — La Brújula de las Decisiones Humanas
+          <span class="badge">Sección</span>13. Dolor y Placer — La Brújula de las Decisiones Humanas
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -338,7 +354,7 @@
       <!-- 14 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Garantía — El Eliminador del Riesgo
+          <span class="badge">Sección</span>14. Garantía — El Eliminador del Riesgo
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -350,7 +366,7 @@
       <!-- 15 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Sección</span> Compromiso y Coherencia — El Peso de la Palabra Dada
+          <span class="badge">Sección</span>15. Compromiso y Coherencia — El Peso de la Palabra Dada
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
@@ -362,7 +378,7 @@
       <!-- 16 -->
       <div class="acc-item">
         <button class="acc-btn" onclick="toggleAcc(this)">
-          <span class="badge">Cierre</span> Conclusión — El Código de la Persuasión en tus Manos
+          <span class="badge">Cierre</span>Conclusión — El Código de la Persuasión en tus Manos
         </button>
         <div class="acc-panel">
           <div class="audio-wrap">
