--- a/loguin/index.html
+++ b/loguin/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+
   <title>Área de Miembros - Iniciar Sesión</title>
   <link rel="icon" href="https://i.imgur.com/qTtFLJe.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
