--- a/loguin/areamember/index.html
+++ b/loguin/areamember/index.html
@@ -94,16 +94,79 @@
   
 </head>
 <body class="text-white selection:bg-white/10 selection:text-white">
-  <!-- Header -->
-  <header class="sticky top-0 z-50 border-b border-white/10 bg-black/70 backdrop-blur-md">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+
+  
+  <!-- HEADER -->
+<header class="sticky top-0 z-50 border-b border-white/10 bg-black/70 backdrop-blur-md">
+  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between relative">
+
+    <!-- Logo + texto -->
+    <div class="flex items-center gap-3">
+      <img src="https://i.imgur.com/qTtFLJe.png" alt="Logo" class="h-8 w-auto opacity-90">
       <div>
         <div class="text-sm sm:text-base font-semibold tracking-wide">Bienvenido</div>
         <div class="text-xs sm:text-sm text-white/60">Área de miembros secreta</div>
       </div>
-      <img src="https://i.imgur.com/qTtFLJe.png" alt="Logo" class="h-8 w-auto opacity-90">
     </div>
-  </header>
+
+    <!-- Ícone de usuário -->
+    <div class="relative">
+      <button id="userBtn" class="w-9 h-9 rounded-full overflow-hidden border border-white/10 hover:border-white/20 bg-white/5">
+        <img src="https://cdn-icons-png.flaticon.com/512/6596/6596121.png" alt="User" class="w-full h-full object-cover">
+      </button>
+
+      <!-- Menu suspenso -->
+      <div id="userMenu"
+           class="hidden absolute right-0 mt-2 w-56 rounded-2xl border border-white/10 bg-black/90 backdrop-blur-md shadow-xl">
+        <ul class="text-sm text-white/80 divide-y divide-white/10">
+          <li><a href="#" onclick="openModal('https://7f5efc8c-3c47-4ebb-8955-b529f5255ded.usrfiles.com/ugd/7f5efc_1a306e5906a4456dbcf0355c9761b911.pdf','Libro'); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">📘 Libro</a></li>
+          <li><a href="#" onclick="enterAudiobook(); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">🎧 Audiobook</a></li>
+          <li><a href="#" onclick="openModal('https://drive.google.com/file/d/18_tZlirSidwlG_ASeA7lom0ZB1T6tBmS/view','Código de la Persuasión Oscura'); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">🧠 Persuasión Oscura</a></li>
+          <li><a href="#" onclick="openModal('https://drive.google.com/drive/folders/1Ks0O2CJ4m06jzLg44y43Wu9l78Wdt6YJ','Bonos'); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">🎁 Bonos</a></li>
+          <li><a href="#" onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb','Libros Prohibidos'); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">📚 Libros Prohibidos</a></li>
+          <li><a href="#" onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb','Manuales de neurociencia — Artículos'); closeUserMenu();" class="block px-4 py-2 hover:bg-white/10">🧬 Manuales Neurociencia</a></li>
+          <li><a href="/login" class="block px-4 py-2 text-red-400 hover:bg-red-500/10">🚪 Salir</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+
+<script>
+  const userBtn = document.getElementById('userBtn');
+  const userMenu = document.getElementById('userMenu');
+
+  userBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    userMenu.classList.toggle('hidden');
+    userMenu.classList.toggle('animate-fade');
+  });
+
+  document.addEventListener('click', (e) => {
+    if (!userMenu.contains(e.target) && !userBtn.contains(e.target)) {
+      closeUserMenu();
+    }
+  });
+
+  function closeUserMenu() {
+    userMenu.classList.add('hidden');
+  }
+</script>
+
+<style>
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-4px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  .animate-fade {
+    animation: fadeIn 0.2s ease forwards;
+  }
+</style>
+
+
+
+
+
 
   <!-- Mensaje topo -->
   <section class="max-w-6xl mx-auto px-4 pt-6">
