--- a/loguin/index.html
+++ b/loguin/index.html
@@ -211,14 +211,14 @@ button:hover, a:hover {
     <!-- Grid: 2 col en móvil -->
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4 md:gap-6">
       <!-- 1. Libro -->
-      <button class="card aspect-[4/3]" 
+  <button class="card aspect-[4/3]" 
  style="background-image:url('https://st.depositphotos.com/1550726/4531/i/450/depositphotos_45317759-stock-photo-man-walking-in-a-mysterious.jpg')" 
- onclick="openModal('https://7f5efc8c-3c47-4ebb-8955-b529f5255ded.usrfiles.com/ugd/7f5efc_1a306e5906a4456dbcf0355c9761b911.pdf','Libro: Código Completo de la Persuasión')">
-        <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
-          <div class="text-xs text-white/70">Libro</div>
-          <h3 class="text-sm sm:text-base font-bold leading-snug">Código Completo de la Persuasión</h3>
-        </div>
-      </button>
+ onclick="openModal('https://drive.google.com/file/d/1Em2Uz1mtyJHmlb2Pk06w1JchYiXT78wd/preview','Libro: Código Completo de la Persuasión')">
+  <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
+    <div class="text-xs text-white/70">Libro</div>
+    <h3 class="text-sm sm:text-base font-bold leading-snug">Código Completo de la Persuasión</h3>
+  </div>
+</button>
 
       <!-- 2. Audiobook -->
       <button class="card aspect-[4/3]" 
