--- a/entrega-es/index.html
+++ b/entrega-es/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="refresh" content="0; url=https://drive.google.com/drive/folders/1qy3XLkZPiIxLT_hfvssLmJpS0LzkRCMI?usp=sharing">
+<head> 
+  <meta http-equiv="refresh" content="0; url=/loguin"> 
 </head>
 <body>
-</body>
+</body> 
 </html>
