--- a/entrega-es/index.html
+++ b/entrega-es/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-  <meta http-equiv="refresh" content="0; url=/loguin"> 
+  <meta http-equiv="refresh" content="0; url=/login"> 
 </head>
 <body>
 </body> 
