--- a/login/index.html
+++ b/login/index.html
@@ -93,7 +93,7 @@
       const email = document.getElementById('email').value.trim();
       if (email) {
         localStorage.setItem('userEmail', email);
-        window.location.href = '/loguin/areamember';
+        window.location.href = '/login/areamember';
       }
     }
 
