--- a/login/index.html
+++ b/login/index.html
@@ -78,7 +78,7 @@
 
   <div class="login-card">
     <img src="https://i.imgur.com/qTtFLJe.png" alt="Logo" class="mx-auto mb-6 w-20 h-auto">
-     <p class="note">*Utiliza el mismo correo electrónico que usaste en la compra.</p>
+     <p class="note">*Utiliza el mismo correo electrónico<br> que usaste en la compra.</p>
     <form onsubmit="handleLogin(event)">
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
