--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -250,7 +250,7 @@ button:hover, a:hover {
       <!-- 4. Bonos (carpeta) -->
       <button class="card aspect-[4/3]" 
  style="background-image:url('https://media.istockphoto.com/id/1482130036/pt/foto/person-in-dark-tunnel-going-towards-the-light.jpg?s=170667a&w=0&k=20&c=EjERNOx0twWLTUBeHlme7jb4xxsk944eisHwVoBq7_c=')" 
- onclick="openModal('https://drive.google.com/drive/folders/1Ks0O2CJ4m06jzLg44y43Wu9l78Wdt6YJ/preview','Bonos')">
+ onclick="openModal('https://drive.google.com/drive/folders/1Ks0O2CJ4m06jzLg44y43Wu9l78Wdt6YJ?usp=sharing','Bonos')">
  
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">BONOS</div>
@@ -261,7 +261,7 @@ button:hover, a:hover {
       <!-- 5. Libros Prohibidos (carpeta) -->
       <button class="card aspect-[4/3]" 
  style="background-image:url('https://us.123rf.com/450wm/ipheung/ipheung2110/ipheung211000107/176563730-conceito-de-seguran%C3%A7a-cibern%C3%A9tica-um-hacker-de-internet-an%C3%B4nimo-online-adulto.jpg?ver=6')" 
- onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb/preview','Libros Prohibidos')">
+ onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb?usp=sharing','Libros Prohibidos')">
  
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Biblioteca</div>
@@ -272,7 +272,7 @@ button:hover, a:hover {
       <!-- 6. Manuales de neurociencia - Artículos -->
       <button class="card aspect-[4/3]" 
  style="background-image:url('https://wallpapers.com/images/hd/dark-forest-background-ee054q7gtjo6s15k.jpg')" 
- onclick="openModal('https://drive.google.com/drive/folders/1_TAYY_6DuyBJ-q_nSuyaBCvtZXibBJWb/preview','Manuales de neurociencia — Artículos')">
+ onclick="openModal('https://drive.google.com/drive/folders/18T08y6aEltW3TM3eISL3nhklkkCewxQ8?usp=sharing','Manuales de neurociencia — Artículos')">
 
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Lecturas</div>
