--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -239,7 +239,7 @@ button:hover, a:hover {
       <!-- 3. Psicolgía Oscura (video) -->
       <button class="card aspect-[4/3]" 
  style="background-image:url('https://static7.depositphotos.com/1275240/755/i/450/depositphotos_7554205-stock-photo-walking.jpg')" 
- onclick="openModal('https://drive.google.com/file/d/18_tZlirSidwlG_ASeA7lom0ZB1T6tBmS/preview','Código de la Persuasión Oscura')">
+ onclick="openModal('https://drive.google.com/file/d/18_tZlirSidwlG_ASeA7lom0ZB1T6tBmS/preview','Psicologia Oscura')">
  
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Video</div>
