--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -243,7 +243,7 @@ button:hover, a:hover {
  
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Video</div>
-          <h3 class="text-sm sm:text-base font-bold leading-snug">Código de la Persuasión Oscura</h3>
+          <h3 class="text-sm sm:text-base font-bold leading-snug">Psicologia Oscura</h3>
         </div>
       </button>
 
@@ -272,11 +272,11 @@ button:hover, a:hover {
       <!-- 6. Manuales de neurociencia - Artículos -->
       <button class="card aspect-[4/3]" 
  style="background-image:url('https://wallpapers.com/images/hd/dark-forest-background-ee054q7gtjo6s15k.jpg')" 
- onclick="openModal('https://drive.google.com/drive/folders/18T08y6aEltW3TM3eISL3nhklkkCewxQ8?usp=sharing','Manuales de neurociencia — Artículos')">
+ onclick="openModal('https://drive.google.com/drive/folders/18T08y6aEltW3TM3eISL3nhklkkCewxQ8?usp=sharing','Manuales de Neurociencia')">
 
         <div class="relative z-10 h-full w-full p-4 flex flex-col justify-end">
           <div class="text-xs text-white/70">Lecturas</div>
-          <h3 class="text-sm sm:text-base font-bold leading-snug">Manuales de neurociencia</h3>
+          <h3 class="text-sm sm:text-base font-bold leading-snug">Manuales de Neurociencia</h3>
         </div>
       </button>
     </div>
