--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -300,9 +300,9 @@ button:hover, a:hover {
 <section id="bonosSection" class="max-w-4xl mx-auto px-4 pb-10 hidden">
   <div class="flex items-center justify-between mb-4">
     <h2 class="text-lg font-bold">🎁 Bonos Exclusivos</h2>
-    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07]">⭠</button>
+    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">⭠</button>
   </div>
-   
+   <p class="text-white/70 text-sm mb-4">Aprovecha este contenido extra con grandes enseñanzas.</p>
   <div class="space-y-3">
     <button class="acc-btn" onclick="openModal('https://drive.google.com/file/d/1r2l3lWc3jJvR8j0GEuO9Q8BzuUzlEJaz/preview','BONO - 29 Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)')">
       1. BONO — 29 Técnicas Secretas de Persuasión Mental (Audiolibro Prohibido)
@@ -317,8 +317,11 @@ button:hover, a:hover {
 <section id="librosSection" class="max-w-4xl mx-auto px-4 pb-10 hidden">
   <div class="flex items-center justify-between mb-4">
     <h2 class="text-lg font-bold">📚 Libros Prohibidos</h2>
-    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07]">⭠</button>
+    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">⭠</button>
   </div>
+
+  <p class="text-white/70 text-sm mb-4">Estos son los libros más poderosos sobre el tema de neurociencia y persuasión.</p>
+
  <div class="space-y-3">
     <button class="acc-btn" onclick="openModal('https://drive.google.com/file/d/1phlkZftIF-NcCQMyMnQcgUXyc0x08LmL/preview','PNL - Técnicas Prohibidas de Persuasión')">1. PNL - Técnicas Prohibidas de Persuasión</button>
     <button class="acc-btn" onclick="openModal('https://drive.google.com/file/d/1rZhyT9vqrRYvQWlhFhufA2Za7y1r0IKD/preview','Alejandro Magno')">2.Alejandro Magno</button>
